Organize regions with flex

--- a/index.html
+++ b/index.html
@@ -4,41 +4,137 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="header-region">
+    <!-- <div class="header-region">
         <div class="header-item-container">
             <ul class="header-item-list">
                 <li class="header-item">Rancho Cucamonga, CA</li>
                 <li class="header-item">909-555-5555</li>
+                <li class="header-item">abcdef@gmail.com</li>
             </ul>
         </div>
+    </div> -->
+    <div class="header-region">
+
     </div>
-    <div class="logo-nav-region">
-        <div class="logo-nav-container">
-            <div class="logo-container">
+    <div class="logo-contact-region">
+        <div class="logo-contact-container">
+            <div class="logo-slogan-container">
                 <div class="logo">
-                    logo
+                    Terra Vista Dental Care
+                </div>
+                <div class="slogan">
+                    Smile Better!
                 </div>
             </div>
-            <div class="nav-bar">
-                <ul class="nav-item-list">
-                    <li class="nav-item">About Us</li>
-                    <li class="nav-item">Our Doctors</li>
-                    <li class="nav-item">Services Provided</li>
-                    <li class="nav-item">New Patient Forms</li>
-                    <li class="nav-item">Contact</li>
+            <div class="top-contact-container">
+                <ul class="top-contact item-list">
+                    <li class="top-contact item">Rancho Cucamonga, CA</li>
+                    <li class="top-contact item">909-555-5555</li>
+                    <li class="top-contact item">abcdef@gmail.com</li>
                 </ul>
             </div>
         </div>
     </div>
-    <div class="body-items">
-        body items
+    <div class="nav-region">
+        <div class="nav-container">
+            <div class="nav-bar">
+
+                <div class="nav-item-container">
+                    <a href="index.html" class="nav item">About Us</a>
+                </div>
+
+                <div class="nav-divider"></div>
+
+                <div class="nav-item-container">
+                    <a href="index.html" class="nav item">Our Doctors</a>
+                </div>
+
+                <div class="nav-divider"></div>
+
+                <div class="nav-item-container">
+                    <a href="index.html" class="nav item">Services Provided</a>
+                </div>
+
+                <div class="nav-divider"></div>
+
+                <div class="nav-item-container">
+                    <a href="index.html" class="nav item">New Patient Forms</a>
+                </div>
+
+                <div class="nav-divider"></div>
+
+                <div class="nav-item-container">
+                    <a href="index.html" class="nav item">Contact</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="body-region">
+        <div class="slideshow-container">
+            <div class="slideshow">
+                <img class="slideshow image" src="./images/istockphoto-1311426433-612x612.jpg" alt="tooth placeholder">
+            </div>
+        </div>
+        <div class="quote-container">
+            <div class="quote">
+                We know that the BST is structured such that all elements to the right of a node are greater and all elements to the left are smaller. 
+                Knowing this, we can start at the root node and compare it with the element, X, that we are looking for. 
+                If X is greater to the root, we move on to the root's right child. 
+            </div>
+        </div>
     </div>
 
     <div class="footer">
-        footer
+        <div class="map-region">
+            <div class="map-container">
+                <img class="map image" src="images/Screenshot_20260104_100023.png" alt="map">
+            </div>
+        </div>
+        <div class="bottom-info-region">
+            <div class="bottom-info-container">
+                <div class="schedule-container">
+                    <ul class="schedule item-list">
+                        <li class="schedule item">M-F: 9AM-5PM</li>
+                        <li class="schedule item">S: 8AM-6PM</li>
+                    </ul>
+                </div>
+                <div class="bottom-contact-container">
+                    <div class="email-phone-container">
+                        <ul class="bottom-contact item-list">
+                            <li class="bottom-contact item">fjaldasl@gmail.com</li>
+                            <li class="bottom-contact item">9090839382</li>
+                        </ul>
+                    </div>
+                    <div class="social-media-container">
+                        <div class="social-media-icons">
+                                <button class="yelp social-media">
+                                    ye
+                                </button>
+                                    
+                                <button class="facebook social-media">
+                                    fb
+                                </button>
+
+                                <button class="google-reviews social media">
+                                    go
+                                </button>
+
+                                <button class="instagram social-media">
+                                    ig
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="bottom-margin">
+
     </div>
 </body>
 </html>
